--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10454,7 +10454,1456 @@ Then on my bolld -stream I yet will carry you.
 
 
 
-396、Let this be my last word, that I trust in thy love.
+396、我的贵人英语老师（钱诗印）老师：男女关系只能靠自己。
+
+想尽办法让自己价值更高，想尽办法让自己选择空间更大，你在男女关系上就会很自由。
+
+就像罗伯特·清琦说的，男女关系一样需要你出门或展示自己、吸引、讨价还价、拒绝或在一起。
+
+男女关系不能靠缘分或真爱，缘分实际上是你提升价值和形象，学会主动和释放可得性以后的副产物。
+
+记住，男女关系只能靠自己。
+
+
+
+———
+
+
+
+男女关系上的执着、痴情、要死要活，本质上都是因为你没得选。
+
+所以，最重要的还是不断进化自己的价值和形象，不断的培养自己主动的能力。
+
+男女关系本质上也是只能靠自己，而不是靠道德绑架或控制别人。
+
+
+
+———
+
+
+
+永远不要和任何人修复关系 ,人人跟之间的关系只有一次, 结束了就是结束了。
+
+
+
+———
+
+
+
+健康长久的关系模式只有一种，就是互利互惠。
+
+如果一个关系出现了比较明显的长时间的互利互惠失衡，而且没办法再次相对平衡，疏远或好聚好散也是一种健康的选择。 
+
+
+
+———
+
+
+
+你男女关系的选择空间，和自身价值与收集资源的能力有关。
+
+第一，自身价值是根本。而自身价值中，形象的占比最高，所以你不断优化自己的形象就是性价比最高的事情。
+
+第二，收集资源很重要。因为许多人虽然条件很好，但圈子小，而且性格被动，那么你的选择空间一样非常狭窄。
+
+做自媒体、学着眼神接触喜欢的异性、做和异性打交道多的工作，都会让你收集资源能力提升许多。
+
+
+
+———
+
+
+
+一定要把自己养的好好的，好到任何人，都得掂量掂量才敢靠近你，这不是高傲，而是清醒。人要活在好的磁场里，和喜欢你的、尊重你的人在一起，不适合你的人，会慢慢自动远离。那些真正与你同频的人，一直都在你身边欣赏你，鼓励你。当你把自己养的足够好，你就不会焦虑，也不会渴望去强求他人。向内求，始终认为自己是一个不错的人。
+
+
+
+———
+
+
+
+一个女人给您索取的本质是她非常穷，她的家里也非常穷。
+
+富人不会索取。
+
+如果您是一个创业者，与一个索取您的女人谈恋爱，其实都是错的。
+
+现代社会，很多老登还在洗脑年轻人，年轻的男人不断的付出，
+
+这其实都是错误的。
+
+以后的社会，大家都是个体，
+
+看谁有钱，谁能保护自己。
+
+——陈昌文 
+
+
+
+———
+
+
+
+情侣是一种很诡异的亲密关系，几个月前你们是陌生人，几个月后，你们可能表现的比家人还亲密。有趣的是，如此紧密的链接，世界上却没有任何一种法度去保护它，也就是说：背叛爱人，不需要付出任何代价，相信爱人，却要拥有无比的勇气。
+
+
+
+———
+
+
+
+如果你不主动啊，最后找到的对象是你这辈子当中遇到的所有人当中最差的一个，没有例外。不管男生还是女生，千万不要等，想要等一个理想对象的概率是非常低的，几乎为零。不然大家为什么都说找对象，而不是等对象呢？
+
+
+
+———
+
+
+
+要知道一个残酷的现实，绝大部分人真心爱慕的那个异性，99%拥有同时吸引其他异性的魅力，一个压根吸引不了几个异性的人，你也99%无法真心爱上他/她。想让其他人眼睛跟瞎了似的看不到一个吸引力强的异性，就你慧眼识珠，这种情况一般只会发生在偶像剧里。优质资源永远都是被哄抢的，包括人 。
+
+
+
+———
+
+
+
+男女关系方面，除了适当买个礼物或一起吃个饭之类，女生不要给男生花太多钱。
+
+就是如果一个关系，需要你不断给男生花钱才能建立和维持，这个关系就是不健康的。
+
+你应该把时间和钱主要花在自己身上，去匹配那种能和你互利互惠的异性。 
+
+记住，男女关系上，不要想着养任何人，不行就好聚好散。 
+
+
+
+———
+
+
+
+男女关系上，女生可以意识到几点。
+
+第一，把时间和钱主要花在自己身上。自己手里筹码越来越多，选择才会越来越多。
+
+第二，意识到男性非常非常多，除了女性就是男性。
+
+第三，只选择不培养不改变，因为培养没有性价比，而且你也没有这个能力。狗你都培养不明白，还想培养人，缺乏自知之明是最大的无知。
+
+第四，学着主动但不纠缠。主动会增加机会，纠缠没有性价比。
+
+第五，有人担心主动可能被短则。首先如果对方比较优秀，短则也不吃亏。还有就是，你也可以通过对方的情况和表现做基本判断，你不能让脑子白长。
+
+第六，喜欢一个人不等于他可以为所欲为。原则大于喜欢，不行还可以喜欢其他人。因为自己本来也不是只会喜欢一个人。如果你觉得自己只能喜欢一个人，你病的不轻。
+
+
+
+———
+
+
+
+一个人越不需要和别人打交道，那么他的处境就越好。因为孤独是幸福、安乐的源泉，只有那些依靠自己，能从一切事物当中体会自身的人才是处境最妙的人。
+
+——叔本华
+
+
+
+———
+
+
+
+学会建立无人兜底的思维。
+第一，尽可能管好自己的身体，管好自己的财务，这些是你的根本依靠。
+同时，把大多数时间和钱花在自己身上，这样你的选择空间会越来越大。
+第二，你的父母、朋友、对象，不是依靠，记住，不是依靠，他们是你的资源。
+心理上不依靠任何人，但要有整合资源的意识。没资源很正常，有资源学会使用会更好。
+总的来说，心理上依靠任何人本质上都是傻逼。如果有资源可以利用，但很清高，脑子也不是特别好。
+
+
+
+———
+
+
+
+转：
+
+人生三件套，不违法、不害人、不忠诚。
+
+不违法很容易理解，害人害己。不害人，就是有些事情虽然不违法但仍然伤害别人的利益，比如骑门房大爷过马路。
+
+有些人听到不忠诚三个字会很难理解甚至很愤怒，说明你智商很低。因为忠诚本质上是单向的，是一种奴役思维。你不应该对任何人忠诚，你和别人应该是契约关系，因为契约是双向的。
+
+比如老板让你忠诚，你也听了进去，你肯定是一个傻逼。你和老板的关系是契约关系，给多少钱办多少事，给的钱不够或虚假承诺，有机会立马换公司。
+
+有了人生三件套，你就是成熟且利人利己。
+
+———
+
+
+
+真正的强大，不是要扔掉那个不够好的自己，而是要把那些局限、不完美、瑕疵、脆弱整合到自己的内心，把那些你曾经要压抑或隐藏起来的部分慢慢活出来。
+
+强大源于对完整自我的接纳，而非对完美自我的追求。当你能拥抱自身的所有面向：不仅是光芒，也包括阴影；不仅是力量，也包含脆弱。那些曾被压抑的特质便能获得释放，你将不再耗费能量去掩饰防御，回收的能量转而会用于创造和成长。
+
+
+
+———
+
+
+
+最近越来越相信：“对的人不是等来的，而是吸引来的。”
+
+想跑步就先去跑，想读书就翻开第一页，想创业就先迈出第一步——行动本身就像一束光，当你坚持跑到第10次、第25次，那些和你步调一致的人，自然会出现在同一条跑道上。
+
+不必刻意寻找同行者，当你专注成为更好的自己，同频的人会一眼认出你的光。就像《人民日报》说的：“不要拉着朋友上路，要在路上找朋友。”
+
+
+
+———
+
+
+
+别去在意赚米的姿势是否优雅，赚到米、拿结果才是最大的优雅。普通人难以姿态优美地维护利益，优雅是属于既得利益者的。
+
+不要介意挽起裤腿、双脚粘泥的去赚米，实际上这几年很多曾经光鲜的行业也都进入微利时代。不要端着、要放开手脚去做事，事成了再做优雅的人也不迟。
+
+
+
+———
+
+
+
+如果，意识到一件事情，一个项目，一个投资，一个关系是要止损的，永远记住，第一原则是时间，第一考虑因素，是要立刻止损。而不是去权衡，计较损失多少，去心疼沉默成本。杀伐果断一点。
+
+
+
+———
+
+
+
+顺境时学会清空自己，逆境时学会提醒自己，向内清醒，向外谦逊，美好才会与你不期而遇。
+
+
+
+———
+
+
+
+心理上不要责怪任何人。
+
+因为责怪别人，本质上是在管别人的事，是心理边界不清晰。
+
+当然，心理上不责怪别人，不等于别人就是对的。而是遇到糟糕的人，要思考，怎么才能避免和这种人打交道，或者如何和这种人建立原则。
+
+心理上不责怪任何人，也不等于不可以批评别人。心理上不责怪别人是心法，意味着要返诸求己，批评别人只是一种手段。
+
+
+
+———
+
+
+
+人一定要努力让自己变成一个主动的人。
+
+因为你只要有能力主动，就得到结果的概率就会大大增加，而且你能做到主动也意味着你很大程度上克服了自恋，这是人格层面很大的提升。
+
+但需要注意的是，主动不是对一个人不断主动，这样既没有性价比，也是对别人的不尊重。
+
+比如你喜欢一个人，你主动了两三次，对方没有给你希望，适可而止就行。因为优秀的人也很多，你对好几个甚至许多个主动，然后和那个给你正反馈的人推进关系就行。
+
+
+
+———
+
+
+
+凡事都要想着从自己身上找出路。
+
+比如你身处一个糟糕的环境或糟糕的关系，你要思考自己能不能改变这个环境或关系，或者是不是该离开这个环境或关系。如果改变和离开都做不到，那就要调整思维，暂时接受这个限制。
+
+任何事情的出路本质上都在自己身上或自己的思维方式上，不在外面。
+
+
+
+———
+
+
+
+转
+
+太爱打扮的男人，基本上都是精致利己男。想让他付出难于上青天，因为他的钱给他自己花都不够，根本没有多余的给你。 
+
+
+
+———
+
+
+
+享受孤独是每个强者的必修课。你很宝贵，不是谁都有资格和你接触的，一定要珍惜自己的时间精力和羽毛。 
+
+
+
+———
+
+
+
+把好情绪留给亲人的能力。
+有些人在外面对普通同事、一般朋友、不熟的街坊邻居时，眉开眼笑，尽力保持着和蔼可亲的形象，但是却对身边亲密的人随意发脾气，认为坏脾气不至于让关系割裂，把任性的样子呈现得淋漓尽致。比如在家里跟父母吵架、顶嘴，对爱人大声嚷嚷。
+你对他们发脾气，即使他们更偏向于选择包容你、原谅你，却会在你发脾气之后暗自伤心。真正在乎你的人，才是最应该被温柔对待的。
+
+
+
+———
+
+
+
+人本质上只有自己厉害一条路。
+
+第一，自己不行，别人是没有办法帮自己的，就像烂泥扶不上墙。所以真正的贵人其实就是自己。
+
+第二，多关注或接近优秀的人，利用近朱者赤近墨者黑的原理，给自己创造一个好的心理环境。
+
+第三，不要老在关系上纠结，不断进化自己，坚持互利互惠的原则，不去控制任何人。 
+
+
+
+———
+
+
+
+学着不断的减少悲观很重要。
+
+第一，学着减少悲观，并不是因为什么道德或信仰，而是为了自身利益。
+
+因为悲观很容易让自己把注意力放在过去或改变不了的事情上，实际上，把注意力放在可以改变的事情上，自己就一定会过得更好。
+
+第二，悲观或乐观本质上都不改变事实，因为悲观乐观只是人对事实的反应。
+
+但是乐观可以改变自己，可以让自己更有热情和行动力，自己不一样以后，自己的事实也会不一样。
+
+第三，悲观乐观都是思维方式产生的。也就是说，你的思维方式发生变化，悲观就会越来越少。
+
+更具体的说，天阴下雨聚散离合本质上都没办法让你悲观，思维方式才会让你悲观。如果你的思维方式发生变化，生老病死也是一种风景。
+
+真正自私的人，真正的功利主义者，不会让自己经常沉溺于悲观主义中，因为根本无利可图。
+
+
+
+———
+
+
+
+不要把自己逼到抑郁，不要把自己气的一身病。所有的事情，除了生死都不值得一提。人这一生，过的是日子，活的是心态。——梭罗  
+
+
+
+———
+
+
+
+人过的很好的时候，就会原谅很多事情。自己内心有了力量，就懒得跟外界较劲。
+
+
+
+———
+
+
+
+生命里第一个爱恋的对象应该是自己，写诗给自己，与自己对话，在一个空间里安静下来，聆听自己的心跳与呼吸。我相信，这个生命走出去时，不会慌张。
+
+
+
+———
+
+
+
+我相信生命的相遇都有意义，就像山峦的每一处崎岖都是它的一部分。夕阳落下去以后，就要和这一天告别了，时间就是这样过去的，你也只能在落日之时看到美丽的晚霞。我认为这些都是很美好，要用力感受生命的平淡与起伏！
+
+
+
+———
+
+
+
+当我要做决定的时候，我都会想:如何才能让年轻的自己感到自豪，年长的自己感到认可，以及现在的自己感到平静。如果我做的决定可以同时满足这三个问题，我就基本能确认我没有选错。
+
+
+
+———
+
+
+
+你的收入会很大程度上影响你的择偶标准，钱可以给你追求爱情的底气，你等得起，也敢随时奉陪。有钱才会有一种「面包我有，只差爱情」的从容感。人在没钱的时候，更容易将就。所以说女生一定要好好搞钱搞事业，这样才能拥有更多的选择权。
+
+
+
+———
+
+
+
+人痛苦的根源，在于把别人看得太重。
+
+实际上，只要不违法，只要不靠他生活，你就不需要在乎任何人。
+
+学着尊重别人，但不在乎。
+
+
+
+———
+
+
+
+"当一个人尝尽了社会的无情，人心的险恶，经济的压力，婚姻的不堪，你终会领悟到，放下执念，善待自己，唯有读书和赚钱，才是一个人最好的修行，前者使人不惑，后者使人不屈。”
+
+——稻盛和夫
+
+
+
+———
+
+
+
+如果一个人影响到了你的情绪，
+你的焦点应该放在控制自己的情绪上，
+而不是影响你情绪的人身上。
+只有这样，才能真正的自信起来。
+——刘同
+
+
+
+———
+
+
+
+自由第一课：接受没有人爱你
+自由第二课：任何人的爱都是负担
+自由第三课：爱上任何人都无法自由
+自由第四课：释怀所有的人都安静的离开
+自由第五课：不对任何人怀有期待
+
+
+
+———
+
+
+
+好的习惯，排名第一的是：自律；排名第二的是：终身学习；排名第三的是：保持运动。拥有这三种习惯，美好人生垂手可得。
+
+
+
+———
+
+
+
+读懂二十四史，你会发现一个可怕的真相：
+
+好人未必有好报，坏人未必遭恶报，唯有强大的人，才能得偿所愿；而弱小者，往往步履维艰。
+
+大到民族、国家，小到个人，弱国无外交，人穷易受轻，弱是生存的枷锁，穷常遇不公。
+
+弱小，便可能深陷困顿；强大，才更易舒展从容。 
+
+
+
+———
+
+
+
+人到中年职场发展平平，经验教训。
+
+一底线高，原则性强，不懂人情世故，情商低，不懂变通，为人耿直实在不够虚伪在职场很吃亏；
+
+二光低头干活不抬头看路，不晓得巴结领导，不会阿谀奉承找关系送礼，错过好多机会；
+
+三清高自负，看不上的领导自动远离，没有学会团结一切可以团结的领导。
+
+年轻人要汲取教训。
+
+
+
+———
+
+
+
+真正靠谱的感情，不是不吵架，而是吵完架，第二天该说话说话，该聊天聊天，不冷战、也不憋着。有时候情绪上来是难免的，问题解决完了，就翻篇了。要学会不翻旧账，也不把脸拉长一整天。
+
+现在的人谁还没个脾气？关键是有话好好说，能低头、能认错，也能主动递个台阶，没有必要非争个输赢。因为你们是亲密关系，是亲情关系，也是最佳队友关系，而非仇人，更不是对手！
+
+
+
+———
+
+
+
+我们总是说，选择大于努力，但是从来没人说明白，怎么选择？
+
+世界上资源是无限的，人生的方向是无限的，机会是无限的，信息是无限的。
+
+那什么是有限的呢？你的时间是有限的，你的金钱是有限的，你的精力是有限的，有限与无限是跷跷板，平衡点是什么？就是你的判断力。
+
+判断力的根本就两步：先想清“我要实现什么”，再找到已经站在这个位置的人，直接去见他！
+
+别在无限信息里瞎转悠，找对人，选对路，比瞎努力管用100倍。
+
+
+
+———
+
+
+
+当你对别人有用时，人性会显露出善良；当你对别人没用时，人性就会暴露出自私；可一旦你碰了别人的利益，人性甚至会变得恶毒。
+
+你所有的烦恼，根源都是自己的能力不足。
+
+等你实力足够强，能给别人带来好处时，才能真正感受到这个社会的善意。
+
+说到底，强大自己，才是解决所有问题的唯一办法。
+
+
+
+———
+
+
+
+要过一种真正诚实的生活。
+
+坦白面对自己的欲望和向往，设定最简单最普通也是最踏实最傻气的路线，一步步靠近。
+
+而不是迂回、躲避，
+
+觉得真实的自我很羞耻、不敢拿上桌面，不敢让世界看到。
+
+同时用一套多数人都挂在嘴边的、无关痛痒的话语来粉饰自己，
+
+像用落叶盖住道路上一个黑漆漆的坑洞那样，
+
+把真正应该、值得探索清楚的暂时藏起来。
+
+不诚实的生活不值得一过。
+
+不仅不快乐，甚至充满危险。
+
+——里昂之城，2025年09月30日
+
+
+
+———
+
+
+
+男女关系上，可以学习老虎机。
+
+就是要给对方希望，但不能是百分百肯定。
+
+因为你不给对方希望，比如一味高冷，一味拒绝，对方也就不想了。但是给对方百分百肯定，比如一味讨好、嘘寒问暖、随叫随到、随时报备，对方很快就会觉得没意思。
+
+股市或du博，明明大多数人都是赔钱，但趋之若鹜就是这个原理。不是让你世故，而是让你明白这个现象。
+
+
+
+———
+
+
+
+爱，许多时候是一个能力问题，不是意愿问题。
+
+如果你在男女关系方面选错了人，你通常就怎么怨恨他也没用，因为他就不具备比如理解你的能力。
+
+所以从你的角度出发，男女关系也是选择大于努力。先要选择一个比较靠谱的人，后面就会很容易。
+
+
+
+———
+
+
+
+无论是经济上的安全感，还是男女关系上的安全感，真正的来源都是自身能力的提升，来源于自己有得选。
+
+把安全感寄托在别人身上，自己的安全感就是风中之烛。 
+
+
+
+———
+
+
+
+男女关系，不要太想着改变对方。
+
+因为对方那套系统在认识你之前，已经运行了将近二十年甚至更多年，你有什么自信能给对重装新系统。
+
+你自己给自己装新系统都举步维艰。 
+
+
+
+———
+
+
+
+有机会的话，一定要多跟层次比你高的人接触。
+
+很多时候，上层社会的常识，真的就是下层社会的秘密，而且是滔天的秘密。如果你能早点知道，你就可以少踩很多不必要的坑。
+
+
+
+———
+
+
+
+贫穷，真的会夺取人的人性。
+当人家徒四壁、一贫如洗的时候，看什么都是偏激的；但一旦口袋里的钱多了，看什么都开始顺眼了，人也变得宽容了。
+
+
+
+———
+
+
+
+凡事从利益的角度，去思考、去衡量、去判断，人就会变得越来越聪明。如果只从情感的角度去考虑问题，人就会变得越来越笨。
+
+
+
+———
+
+
+
+成年人一定要懂的人情世故:
+1、离职了还请同事吃饭，
+这钱真没必要花。
+2、男人追女人，
+对方只回：嗯，啊，哦的，
+就别再付出了，你不是他的菜。
+3、别人问"你在哪工作",
+其实是在心里评估
+对你的尊重程度。
+4、江湖的规矩就是人走茶凉，
+默契散场。
+不要问，问就是不懂规矩。
+5、同学聚会是
+最无聊的"炫富"聚会，
+也是拆散一对又一对的"破鞋会"。
+6、你请朋友吃饭，
+他却带你不认识的人
+赴宴这种饭局没任何意义。
+7、领导不喜欢的人，
+要保持距离；领导喜欢的人
+也要保持距离
+
+
+
+———
+
+
+
+每天一个顶级认知系列
+
+从古至今，真东西都是稀缺资源，真金白银、真话、真相、真男人、真女人等等
+
+做真的时间长了，自然就有价值了
+
+
+
+———
+
+
+
+许多关系本质上就是负资产。
+
+无论是男女关系还是朋友关系，因为许多人没有互利互惠的意识，只知道从你身上索取，还动不动不高兴或指责你。
+
+关系也要学会及时止损，哪怕付出一些短期代价，哪怕暂时变成孤家寡人。
+
+
+
+———
+
+
+
+什么样的女人才是最牛的女人？
+她能掌控自己，高度的自律，她会坚持不断的学习成长，成为一个有智慧的女人。
+她不会轻易的爱上一个男人，她能扛住男人的甜言蜜语，身在情中不动情，不见兔子不撒鹰。
+她既可以对男人柔情似水，也可以对男人不闻不问。她既可以把爱情当做奢侈品一样珍惜，也可以把爱情当做垃圾一样随时扫地。她拿得起，也放得下，她能随时进入，也能随时退出。
+无论单身结婚，她都拥有自己独立的思考能力和赚钱的能力。她根本不在乎别人的看法，一切都在她的掌控之中。
+
+
+
+———
+
+
+
+张爱玲《创世纪》：“从前她是个美女，但是她的美没有给她闯祸，也没给她造福，空自美了许多年。”
+
+张爱玲《怨女》：“漂亮有什么用处，像是身边带着珠宝逃命，更加危险，又是没有市价的东西，没法子变钱。”
+
+是的，单单漂亮没什么用，要不空自美，空山花自落，要不给自己添危险和麻烦。
+
+漂亮搭配脑子才有用。
+
+
+
+———
+
+
+
+人追求的终极自由，不是逃离枷锁，而是明白哪些枷锁根本不必戴。文｜毛姆
+
+
+
+———
+
+
+
+无论哪一个人生阶段，成长和更新自己，才是这个人世间最好的庇护场所，可化解人生中所有的危机和苦难。
+
+
+
+———
+
+
+
+人穷志短是个.魔.咒，打破它
+
+如果只看眼前，路会越走越难，凡事看长远，多为未来蓄力。
+
+
+
+———
+
+
+
+很多人都在说做自己，遗憾的是，很多人早就分不清什么才是真正的自己；你得跟现实，跟人，多次交手，然后才能看到真实的自己。
+
+
+
+———
+
+
+
+庄子说，“无用之用，方为大用。”六便士是有用的，能换来柴米与衣裳；
+可真正撑起灵魂的，却往往是那“无用”的月光。
+它照耀着废井，也照耀着归路，告诉我们：不必总以功利来丈量呼吸。
+纳兰性德写，“人生若只如初见”。
+六便士让我们在尘世里反复奔波，
+可“初见”的心，却只在不经意的一瞥中闪烁。
+或许就是某个深夜，把硬币放下，听见风吹过树叶，那一瞬忽然懂得，岁月的珍贵，不在拥有，而在能否看见。
+小王子守着他的玫瑰，问狐狸什么是驯服。
+狐狸说：是彼此需要，因而独一无二。
+六便士让世界满是同质化的声音—
+可那轮月亮，却总提醒我们：
+真正的珍贵，无法替代。
+一个孩子眼里的月亮，和一个疲惫大人眼里的月亮，
+其实是同一轮—只是看见的方式不同。
+于是我明白了，
+生活并不是六便士和月亮之间的撕裂，而是学会在低头与仰望之间保持平衡。
+白日里数着硬币，是责任；
+夜里抬头看月，是救赎。
+责任让我们立足尘世，救赎让我们不失童心。
+
+真正的境界，大抵如此：
+手里有六便士，心里有月亮；
+能在现实里谋生，也能在孤独里安放灵魂。
+
+
+
+———
+
+
+
+一个人性格好，其实是脑子好！
+
+一个人性格好不好，取决于他多角度看问题的能力！
+
+视觉单一的人，容易固执，觉得凡事只有一条路可以走，而视觉多元的人，表现得更有智慧、平和与包容！
+
+所以，你看一个人性格好，其实是脑子好！
+
+
+
+———
+
+
+
+只舍不得的人，是领袖;
+先舍后得的人，是老板;
+只得不舍得的人，是乞丐;
+ 得不到，德不到，德到了，得到了。
+“德”高于“得”，必有所得，“得”高于“德”，必有所失。万物不为我所有，但万物，为我所用。
+
+
+
+———
+
+
+
+打开生活的天窗，
+阳光自然会照进来。
+
+
+
+———
+
+
+
+稀罕是因为在某人的已知的世界里目前稀少罕有，同时还未产生审美疲劳。永恒或经典是经得起疲劳的美。
+
+
+
+———
+
+
+
+翻过一座山，眼前还有更高的山，
+
+最怕心中没山可攀。
+
+
+
+———
+
+
+
+当你可以和不确定性安然共处时，无限的可能性就在生命中展开了。
+
+
+
+———
+
+
+
+有些东西，你不知道，会很吃亏。
+
+
+
+———
+
+
+
+当你比许多同性长得好看，当你比许多同性更有异性缘，你肯定会被一些同性讨厌。
+
+这既是你变好的代价，也是你变好的证明，因为你变好了，一定会有同性嫉妒你。
+
+许多人会说，我从来没有无缘无故被同性讨厌过，你以为是自己人缘好，其实真正反应的是你长得丑。 
+
+
+
+———
+
+
+
+如果你能够适应或享受别人的敌意或嫉妒，那么你的内核已经是一个比较优秀的人。因为你的内核舒适区，已经是一个优秀的人的舒适区。
+
+如果有人看你不顺眼，质疑你，你就痛苦，你就想自我证明，你的内核还是一个纯屌丝。
+
+换句话说，能够适应或享受被嫉妒的人内核是优秀的人，害怕被嫉妒的人内核是纯屌丝。
+
+
+
+———
+
+
+
+条件允许的情况下，要用演员的标准管理自己的形象和身材。
+
+有人说，这样活着太累了，恰恰相反，这个方法让你得到的会是你付出的十倍以上。
+
+而且不仅是现实收获，你自己也会因此更加自信。
+
+
+
+———
+
+
+
+人战略上努力，远比战术上努力重要。
+
+换句话说，你看长远的能力，远比单纯起早贪黑重要。
+
+
+
+———
+
+
+
+女生如果找不到有一定实力且有付出意识的男人，那确实不如自己搞钱自给自足。没有供养能力和意愿的男人就是纯消耗，毕竟官杀（男人）本来就克身。
+
+
+
+———
+
+
+
+女生觉醒的标志：
+
+1️⃣认识到钱的重要性
+
+2️⃣学会主动远离任何让你不舒服的人和事
+
+3️⃣对所有光环祛魅，越来越现实实际
+
+
+
+———
+
+
+
+很多男人喜欢的清纯款根本不是真懵懂无知傻白甜，而是有着没有被生活摧折痕迹的青春活 力感。能做到这点的女生，基本上都是情绪内核非常强大的狠角色。 
+
+
+
+———
+
+
+
+你把自己的形象和身材优化一点点，你在男女关系方面，经济或情绪价值就会少付出一点点。
+
+甚至是有些人反过来给你提供经济或情绪价值。
+
+换句话说，你的形象越好，你的恋爱成本越低。
+
+
+
+———
+
+
+
+我们对人性最大的误会，就是以为只要是人，都会有点人性和良心。
+
+——余华 
+
+
+
+———
+
+
+
+找对象，不要找那种喜欢抬杠的，因为这种人很难有什么前途。
+
+因为喜欢抬杠的人，实际上就是一种自恋型人格，很难做到实事求是就事论事。 没能力实事求是，就很难把事情做好，就很难有什么前途。 
+
+
+
+———
+
+
+
+花心大丸子
+上下五干年，现在是对女性最好的时代了。你可以读书，自由租房，买房，有个自己的家，出国旅游，自己赚钱，发展爱好。偏偏很多人想不明白，凌晨还睡不着。
+为了一个如此普通的男人，如此浪费你的生命。（女人同理。）
+
+
+
+———
+
+
+
+人生本就没有意义,有意义的是身边的人与事。
+
+
+
+———
+
+
+
+永远不用担心这个世界缺好女人或好男人。
+
+你只需要回答一个问题，就是怎么让自己更好的配得上。
+
+觉得好女人好男人不流通的人，是一种屌丝视角，就是因为你是屌丝，所以你的人生经验就是不流通。你说的话其实只是在反应你自己，不等于客观事实。
+
+
+
+———
+
+
+
+与其陷在焦虑和低落中辗转反侧，不如学会清空思绪，给自己一个宁静的夜晚。好好睡一觉，是对自己最好的治愈。充足的休息，才能换来身心的恢复和明天的从容。
+保持规律作息，就是对自己健康最大的负责。坚持早睡早起，才能用更积极的心态、更饱满的热情过好每一天。
+
+
+
+———
+
+
+
+不喜欢总教育我做人的人，更喜欢愿陪我一起“狼狈为奸”的人。
+
+
+
+———
+
+
+
+成长就是一次次发现，曾让自己魂牵梦萦的，不过是一场场幻想。然后一次次醒来，面对从不容商量的现实。
+
+
+
+———
+
+
+
+即使没有天分，只要你愿意坚持每天做一件事，不知不觉间，你也会走得很远。
+
+
+
+———
+
+
+
+杨绛先生说：“你喜欢吃草莓，你会毫不犹豫的买下它，如果你不喜欢吃香蕉，但考虑到香蕉助消化，你还是会买它。所以，喜欢是单纯的，不喜欢，才会权衡利弊，在你犹豫的一瞬间，其实已经做出了选择。”何为对的人？一见你，就笑的人；一见，你就笑的人。
+
+
+
+———
+
+
+
+很喜欢《人世间》里的这段台词：
+“走得越远，见识越多，认识的人越多，你就越能体会到，人这一辈子，你真的在意的，同时又在意你的人，就那么几个。这几个人，就是你全部的世界。”
+人一辈子，能遇见那么几个真心相待的人真的就足够了，这世上让你觉得新鲜的东西很多，但让你感到安心的东西却很少，这茫茫星球人山人海，我们能遇见，能相识，能相伴，可以看作是命运，或者说的更厉害一点，是奇迹之一，真的要好好珍惜。
+
+
+
+———
+
+
+
+漂亮、有钱、收入高、家境好，这些当然都是加分项，但其实都没有自信自洽、高配得感重要。条件再好，如果内核不稳、认知不够，那也还是会在感情中被低成本持有甚至白p。内在是一切的支撑，外在是锦上添花。
+
+
+
+———
+
+
+
+看得惯你轻松、快乐、舒服的人，才是真的喜欢你、对你好的。那些隐隐给你带来焦虑和内耗的人，本质上都是对你有攻击性的。 
+
+
+
+———
+
+
+
+大学毕业以后，不需要太执着于交朋友。
+
+因为大学毕业以后，一方面你和别人共同生活的基础越来越少很难培养感情，一方面每个人都得为自己的生存发愁。
+
+还有就是，其实你也不需要许多朋友，因为现在是商业社会，你应该做的是不断增加自己的能力。有了能力，就能挣到钱，有了钱，就是完全没朋友你的生活也不可能崩溃。
+
+过于执着于交朋友，实际上是一种农业社会的旧思维，或小县城思维，因为小县城还属于城乡结合部。
+
+没朋友不用害怕，你需要害怕的是，自己毫无能力。所以要把时间放在自我建设上，对朋友这件事完全可以顺其自然 不在这件事上过于努力。
+
+
+
+———
+
+
+
+看到这样一句话:
+你不快乐是因为你没有好好爱自己，
+且常常因为别人而消耗着自己。
+
+
+
+———
+
+
+
+如果你不明白你最大的敌人就是你自己，你就会把所有的时间和精力用在改变他人上，最后一无所得。
+
+
+
+———
+
+
+
+不能因为花会谢
+你就不养花
+
+花本身是浪漫的，美丽的
+养花过程也是浪漫的
+
+
+
+———
+
+
+
+先说一条玄学的：如果老天有意让你成为人上人，那么其一定不会让你在早年生活在一个极为安逸的环境中，这也就是我们所谓的“早年波折”。
+
+
+
+人生就是一个不断推陈出新的过程，只有经历不断地破碎重组，才能构建新生。
+
+
+
+所谓的经历痛楚磨难，亦即每个人的一生要吃的苦，在他的背后都一定会有一个看不见的数字，而这些苦难的到来不过是时间早晚的问题，绝对不存在完全地侥幸躲过。
+
+
+
+所以早吃完，早成长，早享受。
+
+
+
+———
+
+
+
+要知道，世界上有一个真理，就是没有任何一种性格可避免在世间得罪人，也没有任何一种做事方式可以避免在世间上做错事所以生于人世间，对于心态好的人来说就像是个游戏厅，越刺激其就越享受。但是对于性格骨子里唯胆小的人来说就如炼狱，随时随地都有可能会受伤。切记，世俗从来都没有给我们定义过人生应该做什么，但无惧的人永远先享受世界。
+
+
+
+———
+
+
+
+记住，保持能量最好的方式就是不与任何人纠缠，哪怕是让你恨到咬牙切齿的人。
+
+因为当你讨厌一个人或者厌烦一些事的时候，你就注定是要向下纠缠，于果根本就纠缠不清。因为你只要一动念，不管你有没有说出口，或者有没有做什么，它都在影响着你的生命状态。
+
+
+
+———
+
+
+
+身上有“匪气”的人更容易从底层杀出来。
+
+因为他有一种强者气场，这种气场就是天生当老大的气质。那些从底层逆袭成功的人，他们的内心都有一个共性，就是永远都在积极进取，想改变周围的环境，与天斗，与地斗，与人斗，其乐无穷。这种人身上攻击性特别强，总有一种不守规则的冲动，他们大部分小时候不是老师和家长眼中的乖孩子，长大后也不是典型意义上的好人。
+
+但你留心观察就会发现，这些充满匪气的男人有一种强大的魅力和吸引力，会有很多追随者把自己人生的意义都寄托在他身上。
+
+
+
+———
+
+
+
+对自己狠。
+肯节衣缩食，将钱花在吃之外的地方，不一定指的是充实自己，可以是认真打扮、可以是帮助别人，可以是体验新奇的事物。
+
+
+
+———
+
+
+
+决定你能否跨越阶层的或许是羞耻心。
+
+永远不要做一个羞耻心太重的人，一流的红尘大师都是极其自我的存在，他们的羞耻心几乎都是零，无论别人怎么说，无论别人怎么看他，他都能心安理得，必要时还要强势反击。
+
+羞耻是一种巨大的弱者心态，会极大地消耗一个人的能量和精神，使一个人变得士分猥琐，严重限制一个人发展的可能性。如果你仔细观察一下，你就会发现，那些羞耻心太重的人，他的眼神是错误的，他是无能为力的，他是缺乏豪气的。永远不要把自己放在这样一个病态的磁场环境中。
+
+
+
+———
+
+
+
+心软的人，是永远没办法从底层起来的。
+
+要与底层彻底决裂，背叛他们，不把他们当人看，做个底层的异类，你的善良也一定要带点锋芒。越是在底层，就越要与身边的人不同，就越要心狠，越要有非常强的攻击性，要与底层彻底决裂，背叛他们，不把他们当人看，做个底层的异类，你的善良也一定要带点锋芒。
+
+
+
+———
+
+
+
+能量极高。
+
+这条是缺不了的，没有这条，其他答案说的诸如“情商高、易反思、内耗少、学习能力强、有智慧.…”等都没有力气、能量去做，去完成，去达到。
+各种目标就只是幻想，落不了地。
+
+
+
+———
+
+
+
+现实中，我们其实缺失许多真正有用的教育。
+
+比如男女关系的教育，许多人对异性没有基本的认知。比如如何赚钱，社会的基本商业规则是什么。比如如何防御人性中的缺点，以及如何应对现实世界中的欺骗或坏人。
+
+这些东西的缺失，会让许多人走许多年的弯路，遍体鳞伤，甚至许多人到死也糊里糊涂。 
+
+
+
+———
+
+
+
+人生路上，无论我们多么平凡，始终都要记得自己无比重要。只有学会相信自己，接纳自己，敢于对自己的人生负责，才能让我们的人生更加精彩。
+
+
+
+———
+
+
+
+任何不能积累的工作或者生意，都不值得花时间精力去做。
+
+
+
+———
+
+
+
+当你只关注自己的行为时，你就没有看见自己。
+
+当你关注自己行为背后的意图时，你就开始看自己了。
+
+当你关心自己意图背面的需要和感受时，你才真的看见自己了。
+
+透过内心，看见了自己的心灵真相,这是你的生命和心相遇了,爱自己就发生了。
+
+
+
+———
+
+
+
+当你把你的内在世界调整得很好的时候，你的外在世界就会自然而然变得很顺利
+
+
+
+———
+
+
+
+钱的终极功能，从来都不是来买物的。
+而是用来
+买清闲，买空间，买不被定义的人生。
+很多人穷极一生，买了房、车、名牌，人生却依然神形俱疲。因为他们买到了物，但没有买到从物抽身的能力。
+真正生活松弛的人，
+从来不是
+东西最多的人，
+而是选择最多的人。
+生命的意义，
+藏在那些
+“未完成”的遗憾里。
+
+
+
+———
+
+
+
+日常提醒我自己：
+
+一定要养成一种思维习惯，习惯看到任何事情做成的可能性，把这个作为下意识的思考习惯。
+
+而不是用放大镜找困难，然后给放弃冠上一个理由。
+
+不轻易放弃任何机会，经常放弃也容易养成放弃的习惯，让人丝毫没有精神力量，非常糟糕。
+
+
+
+———
+
+
+
+对于普通大众来说，如果生活有捷径的话，那么这条捷径就是做生意。
+再小的生意，得到的思维和眼光的突破，也比上班要提升好几个深度。
+只要做过生意，哪怕失败了，之后再看上班群体的那种心态和思维，就像监考老师看小学生考试。
+
+
+
+———
+
+
+
+提升认知最快的方法是做生意。
+
+
+
+———
+
+
+
+人生南北多岐路，君向潇湘我向秦。
+追风赶月莫停留，平芜尽处是春山。
+
+
+
+———
+
+
+
+人生有三大错误，跟糊涂人讲道理，和不靠谱的人谈正经事，和无情的人谈感情。
+
+
+
+———
+
+
+
+生活不需要比别人好
+但是一定要比以前过得好。
+
+
+
+———
+
+
+
+这个世间是颠倒的，你要反过来才能得道。别人追求外表，你修炼内心；别人享受奢侈，你简单大方；别人心机算尽，你纯真无邪；别人虚荣华贵，你朴实无华；别人患得患失，你来去自如；别人痴迷不悟，你笑看人间～
+
+
+
+———
+
+
+
+这是我看到的最强大的心理暗示，这四句话分享给大家
+
+1.我的人生没有失败，
+ 因为我要么成功，要么成长。
+
+2.我的人生也没有敌人，
+全是老师，所以我不是得到，就是学到。
+
+3.我的人生也没有白走的路，
+  对了我就庆祝，错了我就进步。
+
+4.我就是不会被任何人，任何事情所打倒，我允许一切发生，一切的发生也终将有利于我。
+
+
+
+———
+
+
+
+一生最重要的两门功课—-
+
+❶做喜欢擅长且能赚到钱的事；
+❷找喜欢互补且门当户对的人。
+
+第❶难度为85分，第❷难度为95分。 
+
+
+
+———
+
+
+
+你永远不需要操心你的命运，只需要控制好当下的每一个念头。
+
+
+
+397、- [Piano-歌詞-范逸臣 (Van Fan)-KKBOX] https://www.kkbox.com/hk/tc/song/KleVHZKYBZNABRcEqE
+
+如果愛我已不存在 我希望有一段精采
+
+讓回憶有所感慨
+oh~ oh~ oh~ 有所感慨
+oh~ oh~ oh~ 呼
+
+
+
+398、【4K首发修复丨爷青回！】陈慧琳 - 希望 TVB版MV [电视剧《大长今》粤语版主题曲]
+
+开头念白：人的際遇 就好似風箏
+
+你掌握不到自己的方向和命運
+
+但只要線不斷
+
+只要懷抱著希望
+
+終有一日
+
+會飛到幸福的彼岸
+
+
+
+粤语版歌词：
+
+作詞：鄭櫻綸  作曲：Im se-Hyeon(任世現)
+
+
+
+看风筝飞多远 未断线
+
+看一生万里路 路遥漫漫
+
+看牺牲的脚步 尽化温暖
+
+暖的心 爱追忆 你的微笑
+
+滔滔风雨浪 心声相踫撞
+
+信将爱能力创
+
+心中的冀望 终于都靠岸
+
+未曾绝望
+
+看风筝飞高了 未断线
+
+看天空雾散聚 是谁定下
+
+看艰辛不却步 步向温暖
+
+暖的心 爱珍惜 我的微笑
+
+看风筝飞多远 未断线
+
+看天空雾散聚 是谁定下
+
+看艰辛不却步 步向温暖
+
+暖的心 爱珍惜 我的微笑
+
+滔滔风雨浪 心声相踫撞
+
+信将爱能力创
+
+心中的冀望 终于都靠岸
+
+未曾绝望
+
+分开的眼泪 伤心相挂累
+
+盼将重逢遇上
+
+心中只有梦 一天终再聚
+
+未来在望
+
+
+
+399、- [絕不再失去你-歌詞-張信哲 (Jeff Chang)-KKBOX]
+
+https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
+
+
+
+400、JS的歌曲《遇见未来》 [HIM 华研国际音乐] https://www.him.com.tw/CN/albumcon.php?cid=182
+
+
+
+401、JS的歌曲《杀破狼》HIM 华研国际音乐] https://www.him.com.tw/CN/albumcon.php?cid=182
+
+**JS专辑创作手记-by Justin**
+ 
+
+**1. 杀破狼**
+
+这首歌是在看完末代武士之后写的，剧中的武士道精神给我很大的震撼。武士们面对战争时，那种视死如归﹑不成功便成仁的决心令我印象深刻。就像再一次面对舞台的我们，心中正有著同样的澎湃和忐忑。于是我想以一种意象式的笔法，用歌曲描绘出在我灵魂中，属于中国人的武士道精神。
+
+杀破狼是紫微的一种命格，是七杀﹑破军﹑贪狼三颗星。古代那些征战沙场的大将军，多半是属于这种命格。杀破狼座命的人一生飘迫，大起大落，却有著一举成名的英雄体质。杀破狼的歌词描写的是一个幕府时代的武士，他为战争而生，在征战杀伐中却忽然惊觉，武士生涯的飘迫和孤独。却也用这样的情境暗喻，在都市的丛林战中争权夺利的现代武士们，心中那巨大的孤独和空虚感。宿命和牺牲是整首歌的重点所在，武士道精神中歌颂的光荣牺牲，也令武士这悲凉的宿命画下如落樱般的美丽风景。
+
+这是我们专辑的第一首歌，却也是整张专辑最后完成的一个作品。从进录音室开始到录完这一首歌，我们真正感觉到完成一张自己的唱片，那种至高无上的喜悦。最后公司也决定让我们自己负责这一首歌的制作，如果做音乐是JS的宿命，JS绝对感到无上的光荣。
+
+
+
+402、我的贵人英语老师（钱诗印）老师：健身比小时候读书还更重要，因为好好读书最终的目的还是为了长大后不要跌入贫穷，有个体面一点的职业和生活。可是有的人家里有矿已经有好的生活了，还有的人可以靠脸吃饭或者运气好会做买卖，总之过体面的生活并不是只有科举这一条路。
+但是健身就不一样了，到了60岁往上，有健身习惯和没有健身习惯的人，那个身体素质和状态是完全不一样的。
+每个人终将衰老和肌肉流失，抵抗肌肉流失的唯一途径就是无氧训练。这条路没有捷径，权.贵和富豪也得通过苦练才能拥有肌肉，非常公平。
+
+
+
+403、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -10480,7 +11929,7 @@ Then on my bolld -stream I yet will carry you.
 
 logging  
 
-202511161033 创作者YJH 完成终极版
+202511170942 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
