--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -539,7 +539,97 @@ https://www.youtube.com/watch?v=NGMCVtDf0KU
 
 
 
-12、曾经，我的前女友为我写过一首词，其中有一句，红豆巧，既知别离，当惜今朝。现而今读来亦觉心中隐隐作痛。劝那些还没有受伤的年轻人，早知别离，当惜今朝。现有的这份感情要珍惜，不要等到失去这份感情了，再来找我要“忘情水”。渴望用“忘情水”来忘情，是一种悲哀。 现而今见惯了世间万种情怀，明白了合久必分，分久必合的道理。只是，再合后，已经不是当初那个人了。记得当初和女朋友分手后，有人问我为什么分手。我回答，合久必分，分久必合。朋友又问，那你们什么时候再合？我怅然反问，三国之后，还是汉朝么？是啊，汉朝衰落，分为三国，可是三国再度复合后，已经是晋朝了。- [苦楼说忘情水 | 苦楼行思录] https://web.archive.org/web/20110114233151/http://www.tiankaibin.com/2009/04/%E8%8B%A6%E6%A5%BC%E8%AF%B4%E5%BF%98%E6%83%85%E6%B0%B4/
+12、[苦楼说忘情水 | 苦楼行思录] https://web.archive.org/web/20110114233151/http://www.tiankaibin.com/2009/04/%E8%8B%A6%E6%A5%BC%E8%AF%B4%E5%BF%98%E6%83%85%E6%B0%B4/
+
+其实在感情上，我也是一个彻头彻尾的失败者。
+
+当时就是靠着这葫芦里的“忘情水”，和一本从寺庙里顺手牵羊牵来的《金刚经》才走过来的。
+
+这本《金刚经》发挥了它普度众生的作用，首先度了我，后来我又仗着这部经书给周围的不少人讲不住心，帮助他们提高修心的层次，并度过了不少难关。
+
+我用违佛的手段，做了修佛的事情，真不知道佛祖会怎么看待我。
+
+那些小孩子们来找我聊天，无非是觉得我像一个长辈，他们信任我，对我毫无戒心。
+
+他们向我倾诉自己的情绪，就像对着自己的叔叔倾诉一样。
+
+我呢，毕竟比他们痴长几岁，经历的风雨比他们多一些，自然躲避风雨的方法也比他们多一些。
+
+我会给他们讲我以前的经历和感悟。
+
+我先给他们讲一些我的有趣的故事，引开他们的注意力，但是每一件事情又都紧扣主题，有意无意间，点醒一个道理，貌似漫不经心，实则用心良苦。
+
+因为我知道，要让他们接受一些道理，必须先得让他们把心打开，也就是先让他们开心。
+
+开心了，心就开了，也就容易走出感情的困境了。
+
+说到底，我觉得，感情就是心的问题。
+
+所以，分手了，感情丢了，会心痛。
+
+那些幽情淤积在心中得不到发泄，不断地酝酿发酵，越发让人难以释怀，不可自拔。
+
+这时就需要开心，开心了，心就开了，心打开了，那些淤积的幽情就容易释散出来。
+
+我有一位朋友，失恋七年了，还整天沉浸在失恋的痛苦中消沉低迷，借酒度日。
+
+他的父亲是一位翻译家，他从小就打下了坚实的文学功底，写得一手好诗词。
+
+自从失恋后，他的诗词越发写的缠绵悱恻，催人泪下。
+
+纵是我亦不忍卒读，因为会引发我自己的旧日情伤。
+
+诗越写得好，人就越消沉，或许这就是所谓的为伊消得人憔悴吧。
+
+也只有为伊消得人憔悴的人，才能写出这样的好诗词。
+
+后来我实在看不下去了，就对他说，你啊，七年了还不能从痛苦中走出来，其实并不是走不出来，而是你不想走出来，你在品味自己的痛苦，并从中获得快感。
+
+你舍不去的不是当初她那个人，而只是现在这种品味痛苦的快感。
+
+你写的那些诗，也不是写给当初的那段感情，而是现在的这种感觉。
+
+他听了我的话，没多久就振作起来了。
+
+诗风一变，一扫过去的凄迷、消沉，代之以豁达、洒脱、飘逸。
+
+因为我的那句话解开了他的心结，打开了他的心窗。
+
+打开心窗了，固然苦痛烟消云散。
+
+可是，当初何苦要关闭心窗呢？
+
+曾经，我的前女友为我写过一首词，其中有一句，红豆巧，既知别离，当惜今朝。
+
+现而今读来亦觉心中隐隐作痛。
+
+劝那些还没有受伤的年轻人，早知别离，当惜今朝。
+
+现有的这份感情要珍惜，不要等到失去这份感情了，再来找我要“忘情水”。
+
+渴望用“忘情水”来忘情，是一种悲哀。
+
+现而今见惯了世间万种情怀，明白了合久必分，分久必合的道理。
+
+只是，再合后，已经不是当初那个人了。
+
+记得当初和女朋友分手后，有人问我为什么分手。
+
+我回答，合久必分，分久必合。
+
+朋友又问，那你们什么时候再合？
+
+我怅然反问，三国之后，还是汉朝么？
+
+是啊，汉朝衰落，分为三国，可是三国再度复合后，已经是晋朝了。
+
+情之一字可贵。
+
+问世间情为何物，直教人生死相许。
+
+有生死相许之心固然好，可不要真的就轻易以身相许了。
+
+尤其女孩子，一定要学会保护自己。
 
 
 
