--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12007,7 +12007,29 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 
 
-404、Let this be my last word, that I trust in thy love.
+404、- [“当你经济独立，见过世面，你才不会纠结一个人爱不爱你。你应该去爱这山，这水，这世间万物，以及家人与你自己。”\_哔哩哔哩\_bilibili] https://douc.cc/42IIXP
+
+好，那么为什么苏格拉底一定要痛苦呢
+
+智慧一定要伴随着苦痛吗
+
+可是智慧可以跟欢愉同时并进的
+
+对不对
+
+所以尼采有一本书就叫做欢愉的智慧（即尼采的书《快乐的科学》）
+
+对不对
+
+那历史中有没有谁
+
+展现了快乐的苏格拉底的形象呢
+
+有，那就是唐代的王维——欧丽娟老师
+
+
+
+405、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -12033,7 +12055,7 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 logging  
 
-202511201958 创作者YJH 完成终极版
+202511230912 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
