--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12029,7 +12029,401 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 
 
-405、Let this be my last word, that I trust in thy love.
+405、- [马偕人文天地 --- 馬偕人文天地] https://www.mmh.org.tw/culture/article.php?id=43
+
+庄子用三只鸟写“如何活出自在的自己”！
+
+文： 詹俊裕
+
+第一只鸟：海鸟
+
+《庄子·外篇·至乐》昔者海鸟止于鲁郊，鲁侯御而觞之于庙。奏《九韶》以为乐，具太牢以为膳。鸟乃眩视忧悲，不敢食一脔，不敢饮一杯，三日而死。此以己养养鸟也，非以鸟养养鸟也。
+
+意思是说：一只很大的海鸟，从海上来到鲁国。鲁国的君臣都很高兴，用隆重的音乐，盛大的宴会，来款待这只远道而来的鸟儿。宴会上有猪有羊，舞女伴舞，琴师弹琴，让人眼花缭乱。结果这只鸟没见过这种场面，不吃不喝，几日后就死在鲁国。好好的事，为什么会搞成这样呢？
+
+庄子说：因为不把鸟当鸟。
+
+鸟儿应该吃虫子、吃鱼，活在大海或者森林。达官贵人们喜欢的玩意它不喜欢，它喜欢的玩意，达官贵人们也不喜欢。
+
+夫子曰：己所不欲，勿施于人。实际上，己所欲，也勿施于人啊！
+
+每个人都有自己的活法，都有自己的生存方式，不要横加干涉，无端指摘。对鸟儿是这样，对人也是如此。
+
+父母子女之间，同事朋友之间，夫妻之间，都要保持这样的尊重和界限。不要把自己的意志，凌驾在别人的意志之上。这是鸟的自由，也是人的自由，所以现代人说：允许自己做自己，也要允许别人做别人啊！
+
+ 
+
+  第二只鸟：凤凰鸟
+
+《庄子·秋水：惠子相梁，庄子往见之。或谓惠子曰：「庄子来，欲代子相。」于是惠子恐，搜于国中三日三夜。庄子往见之，曰：南方有鸟，其名为鹓鶵，子知之乎？夫鹓鶵发于南海而飞于北海，非梧桐不止，非练实不食,非醴泉不饮。于是鸱得腐鼠,鹓鶵过之，仰而视之曰：『吓！ 』今子欲以子之梁国而吓我邪？
+
+意思是说：庄子的朋友惠子当了梁国的宰相，有人传播谣言，说庄子要来梁国抢宰相之位。
+
+惠子很害怕，于是下令整个梁国搜捕庄子。庄子亲自去见惠子。
+
+庄子说南方有凤凰鸟，遇到梧桐才会休息，只吃竹米（竹子开的花），只喝清泉。
+
+猫头鹰得到一只死老鼠，凤凰路过，猫头鹰发“吓！”的声音。你今天也要为了梁国的相位来吓唬我吗？
+
+庄子将自己比作鹓鶵，将惠子比作鸱，把功名利禄比作腐鼠，表明自己鄙弃功名利禄的立场和志趣。
+
+在庄子看来，人生于天地之间，摆弄金钱，汲汲于名位，实在是无聊。
+
+自古以来，欲望太多的人，多半不能成事。
+
+淡泊明志，宁静致远。
+
+人心是有限的，装得下功名利禄，就装不下志向和抱负。金钱地位，生不带来，死不带去。懂得知足，学会简单，才是一个人真正的高贵。
+
+
+
+  第三只鸟：大鹏鸟
+
+《庄子·逍遥游》北冥有鱼，其名为鲲，鲲之大，不知其几千里也。化而为鸟，其名为鹏。鹏之背，不知其几千里也；怒而飞，其翼若垂天之云。
+
+意思是说：北冥有条很大的鱼，能变成一只大鹏鸟，遨游千里。但是就这样大的鸟，也需要凭借风才能飞行。
+
+庄子说：人生最大的痛苦便在于此，只要“有待”，便不能自由。依靠的东西越多，想要的东西越多，人就越发不得自由。
+
+ 庄子说：物物而不物于物。
+
+人应该做物的主人，而非奴隶。控制自己的物欲，学会享受精神的富足。就是少一些欲望，多一些灵魂的自得其乐。当然，要想真正求得自由，人还需要放弃“我执”。
+
+人所有的痛苦，无非是因为有「我」。我所求，我所爱，才有我所恨，我所惧。
+
+庄子在《逍遥游》的最后说：至人无己，神人无功，圣人无名。
+
+“至人”忘掉自己，“神人”没有功绩心，“圣人”没有名望心。
+
+人有自己的意志，自然有自然的意志。
+
+舍弃个人的荣辱得失，舍掉自我的执念，尊重天道，顺其自然，才能真正的自由。
+
+懂得尊重别人，不因理念不同而折腾别人；学着简单生活，不因名利而折腾自己。学着顺其自然，不要因为执念而折磨自己。
+
+这样的人，内心丰饶富足，惬意安宁，自得其乐。
+
+
+
+ [庄子的读书之道] [https://mp.weixin.qq.com/s/iOXl69105RH3pHIL0cMjAg](https://mp.weixin.qq.com/s?__biz=MzI4MDQ4OTU1OA==&mid=2247510586&idx=1&sn=8d2594432acca39090131c6cc8141fad&scene=21#wechat_redirect)
+
+[浅谈《庄子》中的人生观] [https://mp.weixin.qq.com/s/EHJj_zlBPLLtJe4y5g4hWA](https://mp.weixin.qq.com/s?__biz=MzIxMzgwMDY0Ng==&mid=2247485232&idx=5&sn=47ca92d818424019662d182cc5e0e576&scene=21#wechat_redirect)
+
+[像庄子那样活着] [https://mp.weixin.qq.com/s/ETyTgerwXbDG23ZOY9DbbQ](https://mp.weixin.qq.com/s?__biz=MzA5NzIwNTkzMw==&mid=2651127843&idx=1&sn=4bdaeb4a92762ea1f8a8dde39c3ba525&scene=21#wechat_redirect)
+
+[【活动回顾】陈引驰谈如何读庄子] https://icscc.fudan.edu.cn/a3/1f/c31745a434975/page.htm
+摘：今天我们如何读《庄子》
+
+讲座现场
+
+《庄子》是中国传统文化中非常重要的一本书，郭沫若先生有一篇文章《鲁迅与庄子》，里面有一句话非常有名，他说整个中国的文学史差不多有一半是在庄子的影响之下的。这是非常大的判断。
+
+诸子的著作，基本上是“论孟老庄”。从文学角度来讲，《论语》是一段一段的语录体，是孔子的弟子以及再传弟子对孔子言行的记录；《孟子》是语录体的发展；《老子》是一句一句的格言警句；而《庄子》相对来说是成篇的文章，而且这些成篇的文章风格各异、各有风采。所以从这个意义上来说，《庄子》这本书的阅读有它的特点，主要有三个方面：
+
+一，知人论世。读一本书要知道作者这个人，中国过去讲“知人论世”。虽然庄子这个人我们今天了解得很有限，他的生平情况我们都不是很清楚，我们只能知道一个大概，甚至有些可能只是传说，有些是他自己或者弟子写的文章塑造出的一个形象，不一定是完全真实的历史事实，但是我们还是要知道庄子这个人和他所处的时代，这是中国传统理解文学作品一个很重要的角度和方式。
+
+二、着眼于书。《庄子》这本书我们都知道一共33篇，这33篇逐字逐句读下去其实是很有难度的，那么有没有由浅入深、层层深入的路径？如何理解《庄子》？《庄子》这本书有什么样的特点？这是在第二部分我想跟大家分享的。
+
+三、庄子思想。《庄子》对我们今天的人有何种意义。读了这本书之后，可能绝大部分的人会想：我不做这方面的研究，这本书对我有什么意义呢？我们就需要跳出这本书来宏观了解庄子的思想和他的精神。
+
+**庄子其人**
+
+相比于儒家的孔子和孟子，老庄的生平都是模模糊糊不清楚的。孔子的生平在司马迁的《史记》中记录得很清楚，《史记》里有专门记载孔子生平的篇章——《孔子世家》。孟子的生平基本上也是可以排出来的，但是老子和庄子是排不出来的。
+
+最早司马迁做传的时候，关于老子的记录只有两件事，一个是孔子向老子问礼，另外一件是老子出关。司马迁记录庄子就只有一件事，就是楚王请他做相，他不去。
+
+关于老子和庄子这两个人物，在历史上是真实存在的，这个我们不怀疑。只是说他们生平事迹比较模糊，比如说庄子，近代很多学者都做过考证，最好的史学家和研究传统文学的大家像梁启超、马叙伦、钱穆都考证过，但是把他们考证的结果一排发现，最远相差了半个世纪。这个差别非常大，这说明庄子这个人的生平是讲不清楚的。
+
+但是对道家来说，讲不清楚是合理的，如果讲得清楚反而问题大了。因为他们要跟这个世界离得远一点，像庄子就更加明显。中国传统文化里后来的“隐逸”、“隐士”追根溯源都会追溯到老庄这里来，既然是隐士，那你在这个世界上留下这么清清楚楚的痕迹，不是在违背自己的追求吗？所以道家不清楚生平事迹，也是非常正常的。
+
+那既然不清楚，是不是意味着我们可以不管他们的生平？
+
+从史学事实的角度，可以不管，假定庄子是不存在的就好了。庄子的一些事迹写在《庄子》这本书中，可能是他写的，也可能是他的弟子编写的，这件事情是真还是假，我们持保留意见。但是有一点是真的，这部书它背后要表达的意思，这个是真实的，这就是文学。
+
+对小说来说，所写的故事是虚构的，但不代表它所要表达的情感、想法是假的，它可能是很真实的。《庄子》写楚国国君请他去做官，他不去，他觉得仕途万丈红尘非常危险，一不小心命就丢了，不能去。从这个意义上讲，这是很真实的，因为我们知道庄子就是这样的一个人，这个故事背后表达的意愿和情感，这个取向是非常真实的。虽然我们不能认定《庄子》中记录的都是庄子本人真实的经历，但是了解这些故事对于我们了解庄子本人的思想是有实在帮助的。
+
+那么庄子是一个什么样的人？
+
+就《庄子》这部书所记录的庄子的言行来看，简单概括的话，首先庄子是一个穷人，过去的讲法是“贫”，他面黄肌瘦，靠给人织草鞋为生，住在穷街陋巷中。他去见楚国的国君，穿的是“大布”，大布就是粗布，粗布上还有补丁。
+
+第二，穷。古代讲“达则兼济天下，穷则独善其身”，穷就是指仕途不顺，换句话说就是这辈子过得不爽，没有实现自己，个人价值没有得到充分体现。庄子在司马迁《史记》中记载，最早是做“漆园吏”，这肯定是个小官。我们从庄子一生过得不舒展这一层也能看出来。
+
+第三，鄙事。用《论语》中孔子的话来说，“吾少也贱，故多能鄙事”，庄子“鄙事”是很清楚的。庄子是个木匠，他做木工活，《庄子》中的很多道理都是借树木、木工活来讲，也能看出来他并不是一个贵族身份，跟他的贫和穷都是有关系的。
+
+第四，穷且益坚。庄子这个人还是很硬的， 年轻的时候是个愤青，年老之后也嬉笑怒骂。
+
+从这些特点来看，庄子应该是个失败者，事实上我们也的确可以这样讲，他是个失败者。看上去什么都没有，没有官位、没有钱财。如果只是这样，那么庄子这个人物就没什么好说的。
+
+但是庄子又不仅仅是这样，他还有另外的方面，换句话说，除了这个现实世界，对于庄子来说还有另外一个世界，这个“另外的世界”是什么呢？起码有三个方面：
+
+第一，崇尚自然。人间乱七八糟的事情他很厌倦，也避之唯恐不及，他与这个世俗世界保持距离，那么他去哪呢？就是自然。
+
+《庄子》中很多故事都是在自然的环境中发生的，他经常在山林水涧漫游。他在林子里穿来穿去，看到一棵大树，长得歪歪扭扭，有人说这棵树长得这么歪，一点用都没有，庄子说你错了，你说它没用是因为它长得歪没有办法把它做成大梁、椽子，但是正因为歪歪扭扭，不能为人间所用，所以才能够保全生命，这才是大用。
+
+
+
+**《庄子》节选**
+
+惠子谓庄子曰：“吾有大树，人谓之樗。其大本拥肿而不中绳墨，其小枝卷曲而不中规矩，立之塗，匠者不顾。今子之言，大而无用，众所同去也。”庄子曰：“子独不见狸狌乎？卑身而伏，以侯敖者；东西跳梁，不辟高下；中于机辟，死于网罟。今夫斄牛，其大若垂天之云。此能为大矣，而不能执鼠。今子有大树，患其无用，何不树之于无何有之乡，广莫之野，彷徨乎无为其侧，逍遥乎寝卧其下。不夭斤斧，物无害者，无所可用，安所困苦哉！”
+
+——《庄子·逍遥游》
+
+译文：惠子对庄子说：“我有一棵大树，人们叫它‘樗’。它的主干木瘤盘结而不合绳墨，它的小枝弯弯曲曲而不合规矩，生长在路上，匠人都不看它。现在你的这些言论，大而无用，大家都抛弃而去了。”
+
+庄子说：“你没有看见猫和黄鼠狼吗？它们趴伏着身子，等待出游的小动物；东西跳跃掠夺，不避高低；常常踏中机关，死在罗网中。再看那牦牛，庞大的身躯像垂在天上的云，它的能力可做大事，但不能捉老鼠。现在你有这棵大树，发愁它没有用，何不把它种在虚寂的乡土，或广漠的旷野，随意地徘徊在树旁，优游自在地躺在树下。不因遭受斧头的砍伐而夭折，没有东西来伤害它，没有什么可用，又会有什么可困惑苦恼的呢！”
+
+
+
+他和惠子在水边，看到几只鱼游来游去，他对惠子说，你看这鱼多开心，惠子说子非鱼安知鱼之乐，两个人开始吵起来。
+
+像这样的在山林水边发生的事很多很多，可以看出庄子是非常热爱自然的，他是一个在自然中生活的人，他在自然中非常开心，自得其乐。
+
+
+
+**《庄子》节选**
+
+庄子与惠子游于濠梁之上。庄子曰：“鲦鱼出游从容，是鱼之乐也。”惠子曰：“子非鱼，安知鱼之乐？”庄子曰：“子非我，安知我不知鱼之乐？”惠子曰：“我非子，固不知子矣；子固非鱼也，子之不知鱼之乐，全矣！”庄子曰：“请循其本。子曰‘汝安知鱼乐’云者，既已知吾知之而问我，我知之濠上也。”
+
+——《庄子·秋水》
+
+译文：庄子和惠子一起在濠水的桥上游玩。庄子说：“鲦鱼在河水中游得多么悠闲自得，这是鱼的快乐啊。”惠子说：“你又不是鱼，哪里知道鱼是快乐的呢？”庄子说：“你又不是我，怎么知道我不知道鱼儿是快乐的呢？惠子说：“我不是你，固然就不知道你（的想法）；你本来就不是鱼，你不知道鱼的快乐，这是可以完全确定的。”庄子说：“请你回归最开始的设定，你说：‘你哪里知道鱼快乐’这句话，就说明你很清楚我知道，所以才来问我是从哪里知道的。现在我告诉你，我是在濠水的桥上知道的。”
+
+
+
+第二，人间辩论。庄子对人间争名夺利的事很厌烦，他觉得很危险，不愿意加入，但他还是跟人打交道的，那他跟什么人打交道呢？
+
+《庄子》这本书你读下来会发现，他打交道最多的那个人就是惠子，他经常和惠子吵来吵去地辩论。
+
+所以，我觉得庄子并不是一个普通的人，虽然他又贫又穷，整天愁眉不展，但他有他的乐趣，他有他精神上的追求，就是知识上、智慧的东西，这个东西从哪里体现的？就是在跟惠子的辩论中体现出来的。
+
+《庄子》里面体现庄子思想的很多重要的部分都是在跟惠子的辩论中，第一篇《逍遥游》里就在讨论“有用无用”。
+
+惠子在魏国做官，有一天魏王送了一粒种子，种出来了大葫芦，大葫芦太大了，舀不了水有什么用？
+
+庄子就批判惠子，说你这个人内心太嘈杂，不能盛水，但你把它绑在身上，浮游于江湖之上，不是很好吗？这就是“有用无用之辩”。
+
+他喜欢辩论，但他不会为柴米油盐的事辩论，不会把酒话桑麻，他讲的都是比较思辨、超然的事情。
+
+
+
+**《庄子》节选**
+
+惠子谓庄子曰：“魏王贻我大瓠之种，我树之成而实五石，以盛水浆，其坚不能自举也；剖之以为瓢，则瓠落无所容。非不呺然大也，吾为其无用而掊之。”庄子曰：“夫子固拙于用大矣。宋人有善为不龟手之药者，世世以洴澼为事。客闻之，请买其方以百金。聚族而谋曰：‘我世世为洴澼，不过数金；今一朝而鬻技百金，请与之。’客得之，以说吴王。越有难，吴王使之将，冬与越人水战，大败越人，裂地而封之。能不龟手，一也；或以封，或不免于洴澼，则所用之异也。今子有五石之瓠，何不虑以为大樽而浮乎江湖，而忧其瓠落无所容？则夫子犹有蓬之心也夫！”——《庄子·逍遥游》
+
+译文：惠子对庄子说：“魏王送给我一粒大葫芦种子，我种植长成后结的葫芦有能装下五石粮食那么大；用来盛水，它的坚固程度却承受不了自己的容量；割开它来做瓢，则瓢太大无处可容。这葫芦不是不大，我认为它没有什么用，便把它打破了。”庄子说：“你真是不善于使用大的东西呀！宋国有个人善于制造不龟裂手的药，于是利用它，他家世世代代都以漂洗丝絮为业。有个客人听说了这种药，请求用百金买他的药方。他聚合家族人商量说：‘我家世世代代漂洗丝絮，只得到很少的钱；现在一旦卖出这个药方就能得到百金，就卖给他吧。’那客人得到了药方，便去游说吴王。这时越国对吴国发难，吴王就派他将兵，冬天同越人水战，大败越人，吴王分封给他土地以为奖赏。同样一个让人不龟裂手的药方，有的因此得到封赏，有的却只是用来从事漂洗丝絮的劳动，这就是使用方法的不同。现在你有五石容量的大葫芦，何不系着当作腰舟而浮游于江湖之上，反而愁它太大无处可容呢？可见你的心还是茅塞不通呀！”
+
+
+
+第三，独与天地精神往来。这句话出自《庄子·天下篇》，庄子不跟世俗世界往来，超然于其上。
+
+什么叫“独与天地精神往来”？其实是他有另外一个精神的方向。他是从整个自然、世界宇宙来看待问题的，他不会去讨论一些很具体的问题。
+
+
+
+**《庄子》节选**
+
+独与天地精神往来，而不傲倪于万物；不谴是非，以与世俗处。
+
+——《庄子·天下》
+
+译文：只有庄子他同于大道、在精神上与神明自由往来，而不蔑视万物；不涉足人间的是非，而与世俗之人和平相处。
+
+
+
+所以你看他跟惠子的讨论，都不是针对具体问题的，我们看先秦诸子很多发言和争论，都是治国理政，对现实中的很多问题的探讨，孟子说要行“仁政”、要有“王道”，不能“霸道”，但是庄子从来不谈这些问题，他的论题都是另外一个层面上的。
+
+独与天地精神往来其实还有更深的一层意思，就是人要站在整个自然和宇宙，在更高的立场上去看待世间的万物。
+
+虽然庄子在现实世界中是一个不太成功的人，但他在另外一个世界——在自然中、在人与人之间智慧的交流和辩论中找到乐趣，归向天地精神。
+
+我们今天要理解庄子，还是要面对《庄子》这本著作。那么，《庄子》这本书该怎么读？
+
+经典著作中的语言是我们现在不常用的一种语言，跟我们现在是有距离的，那怎么读呢？就是要从字、词、句到篇章一点一点深入下去。
+
+读《庄子》也是如此，读原文一定会碰到文字的问题。要解决文字的问题就只能靠多读多看，找一个恰当的注释作参考。但是《庄子》中另外还有一些特别的地方，我觉得有必要跟大家提示一下。
+
+
+
+**壹 字义的古今之变**
+
+《庄子》中有些字的意思跟今天不太一样，但是却非常关键，所以要注意字义的古今变化。
+
+譬如《庄子》中有一句话讲美学和文学艺术的，叫“朴素者，天下莫能与之争美”，什么是“朴素”？我们今天对朴素的理解跟当时有很大不同，如果我们要真正了解庄子的意思，就必须要回归到这两个字最初的意义上去。
+
+何谓“朴”？
+
+“朴”指没有修剪过的树。东汉著名学者王充《论衡》中讲了什么是“朴”，即“未经刀斧之断”。从这个意义上来讲，我们现在走在街上大概找不到一颗“朴树”，都是修剪过枝叶的树。
+
+何谓“素”？
+
+“素”指没有染过的，本来的颜色。这个意义在哪里保存呢？我们今天有个成语叫“素面朝天”，就是不化妆的，没有任何粉饰雕琢的。
+
+“朴素”就是指没有后天的修剪，没有后天的装饰，庄子认为这个是最美的。这是庄子非常重要的美学思想，即保持本真。所有的外在的装饰、改变都是不恰当的。
+
+我们过去讲文学中有三个基本的东西，即“真善美”。中国人很早就有“美”这个概念，但是从来不把“美”当作至高的概念，总是其他东西结合在一起。譬如儒家把“美”“善”两者结合，“尽善尽美”。
+
+《论语》里讲孔子这个人非常喜欢音乐，“闻韶乐，三月不知肉味”，孔子为什么这么喜欢韶乐呢？韶乐是关于舜的音乐，孔子讲韶乐“尽美矣，又尽善矣”，它非常美，又非常合乎善的标准，美善兼备，所以它是最好的。
+
+他讲“武乐”：“尽美矣，未尽善也。”“武乐”是关于周武王的，它很美，但是还不到善的地步，所以在“尽善尽美”的韶乐和“尽美而未尽善”的武乐这两者中，孔子更推崇的是韶乐。在儒家看来，美善结合才是最好的。
+
+中国文学史为什么这么推崇杜甫？正是因为杜甫是美善兼备的。李商隐的诗也写得很好，技巧非常高妙，辞藻华美，但是没办法跟杜甫相比。杜甫有博大的胸怀，关心天下，因此他是美善兼备的。
+
+而对道家来说，保持本真才是最美的。《庄子》中有很多这样的故事，其实都是从这个角度去理解的，譬如“东施效颦”的故事。西施很美，经常皱着眉头捧心而走，乡里都觉得她非常美，但是东施（我们今天叫东施，《庄子》中记录的是“里之丑人”），她也效仿西施一样捧着心、皱着眉，结果身边的人都被吓跑了。庄子就批评东施：彼知颦美，而不知所以美。你知道西施是美的，但是不知道她为什么是美的。
+
+庄子为什么这么说呢？
+
+因为西施有心脏病，心脏不好，所以皱着眉头、捧着心，表里如一，发自本真，所以大家都认为是美的。其实丑不丑都是其次的，庄子不在乎一个人的外表长得怎么样。
+
+《庄子·德充符》里记录了一些外表奇形怪状的人，驼背啊、缺胳膊少腿的，庄子认为这些人虽然外表是残缺的，但是他们内里都非常完整。外表长得怎么样从来不是庄子最在意的。
+
+那么庄子为什么要批评“里之丑人”？因为她没有心脏病，却作出捧心的样子。换一个角度来说，如果这个“里之丑人”有心脏病，庄子肯定不会笑她。如果西施没有心脏病，却依然捧心颦眉，那一定会被庄子批判。道家讲究的是“真”和“美”。
+
+所以要理解“朴素”，一定要回归这两个字的本义，否则再怎么发挥一通都是不对的。
+
+
+
+**贰 对语言符号的不信任**
+
+庄子喜欢开玩笑。譬如《逍遥游》里一开篇就是“鲲鹏之变”，“鲲”是鱼，“鹏”是鸟，大鱼变成了大鸟。这真的不知道庄子是怎么想出来的，“鲲”和“鹏”在古代的典故中都出现过，但是“大鱼变成大鸟”，除了庄子，没有人这样讲过。《列子》里也讲过鲲和鹏，没有讲这种鲲鹏之变。
+
+ “鲲”字，最初的意义是指鱼子，小鱼子。庄子用了一个含义是“鱼子”的词来指代大鱼，这很奇怪。
+
+庄子肯定是有他的深意的。当你了解庄子其他的思想之后，你会知道这些小小的差池都是有道理的。庄子本人很大程度上对语言符号是不信任的，我们讲“言实”之间的关系，语言符号究竟能不能表现内心真正要表达的那个对象？庄子是不太相信的。
+
+用现代语言学的概念来讲，“能指”和“所指”之间的关系是随意的。怎么理解这种“随意性”？我们过去常常开赵元任先生的玩笑，赵元任先生是很有名的语言学家，他说中国的老太太看到美国人把水叫“窝头”（water谐音），就搞不懂了，怎么能把“水”叫“窝头”呢？这是赵元任先生举的一个例子。
+
+实际上我们知道，符号和它所指的实在之间的对应是约定俗成的，“能指”和“所指”是约定俗成的关系。庄子在这里我觉得是一种非常机智的做法，我们现在的人要读《逍遥游》这段，肯定要去查一查“鲲”是什么意思，一查发现竟然是“鱼子”，很不可思议，就相当于我们今天你把一个大象叫成小老鼠，会产生这样一种奇异的效果。而这个背后就是表现了庄子对语言的不信任。
+
+庄子认为“言不尽意”，他从不同层面上讲了语言符号和表达对象之间的关系。“物之粗”，你可以给它一个符号、指称；“物之精”就讲不清楚了，是不能言传的，只能意致。
+
+庄子有一个成语叫“相视一笑，莫逆于心”，现代的东西都是要分析的，但是这个世界上很多东西是没法分析的。所以老子讲“道可道，非常道”。
+
+庄子认为最高的“道”，不可言传，也不可意致，只有去体验、体会。所以庄子讲要与天地大道相通，闭着眼睛把自己全部忘掉，离形去知，心如死灰，身如槁木，神与物游，让天地之气与自己完全融会一体。这种体验在现代来讲是一种“神秘体验”。
+
+《庄子》中蕴含着极为深广的思想。它涉及到对语言符号的看法，语言符号到底有没有边界，它的有效性到底到什么范围。很多东西语言是无法覆盖的，所以“言”“义”到“体”，去体察、体会、体味。从“鲲”这个字追问进去，会有很多东西可以去拷问，一连串的思想蕴含在里面。
+
+《齐物论》里有一段话：“道行之而成，物谓之而然。”
+
+“道”既是道路，也是大道。路是走出来的。鲁迅那句名言“世上本没有路，走的人多了便有了路”，其实是从庄子这里来的。
+
+“物谓之而然”，“物”是什么？你称呼它为什么它就是什么。
+
+“道”和“物”是《庄子》里面非常重要的两个层面，庄子是站在“道”的层面去看待世界万物。
+
+所以读《庄子》，有些字词你必须要追究，但是有些却不能太追究，否则就“死于句下”。
+
+
+
+**叁 言在此而意在彼**
+
+庄子》有个特别重要的特点就是寓言。
+
+《庄子》中的寓言是非常复杂的，它不是字面理解的那种意思。《荀子》《韩非子》基本上就是字面所讲的意思，有时候很雄辩，有时候分析得也很细致，但基本上是按照正常思维理解的逻辑。《庄子》却不是这样，它常常使用寓言来表达。
+
+寓言最早出自《庄子》这本书，全书三十三篇里有一篇就叫“寓言篇”。对于“寓言”，庄子自己有一个界定，叫“藉外论之”。用今天的话来说就是“言在此而意在彼”，借这件事来讲另外一件事，是《庄子》最基本的叙事方式。
+
+《庄子》中有一个故事是讲惠子的，庄子和惠子的关系很好。有一次庄子给别人送葬，经过惠子的墓地，不由得百感交集，发了一个感慨。但是他发感慨不是说“哎呀，惠子是我的好朋友，我们曾经一起讨论问题，但是他现在不在了，我很想他”，他没有这样说，而是对跟随的人讲了一个故事：
+
+楚国的国都郢都有一人，不知道他的名字，称为“郢人”。郢人有个好友，是位匠人，人们都叫他“匠石”。郢人是个勇敢沉着的人，他的朋友匠石是个技艺高明的匠人。有一次，他们表演了这样一套绝活：郢人在鼻尖涂上像苍蝇翅膀一样薄的白粉，让匠石用斧子把这层白粉削去。只见匠人不慌不忙地挥动斧头，呼地一声，白粉完全被削掉了，而郢人的鼻尖却丝毫没有受到损伤，郢人也仍旧面不改色，若无其事地站在那里。
+
+这件事被宋国的国君知道了，他非常佩服匠石的绝技和郢人的胆量，很想亲眼看一看这个表演。于是，国君就恭恭敬敬地把匠石请来，让他再表演一次，匠石说：“鄙人确实曾做成过这件事，但是我的好友已经去世，我失去了唯一的搭档，再也没法表演了。”
+
+庄子讲完这个故事，意味深长地说：“自从惠子离开了人世，我没有可以匹敌的对手了！我没有可以与之论辩的人了！”
+
+
+
+庄子送葬，过惠子（即惠施，是庄子的好友）之墓，顾谓从者曰：“郢（楚国国都）人垩漫其鼻端若蝇翼，使匠石斫（砍；削）之。匠石运斤成风，听而斫之，尽垩而鼻不伤，郢人立不失容。宋元君闻之，召匠石曰：‘尝试为寡人为之。’匠石曰：‘臣则尝能斫之。虽然，臣之质死久矣！’自夫子之死也，吾无以为质矣，吾无与言之矣！”
+
+——（战国·庄周《庄子·徐无鬼》）
+
+
+
+这就是成语“运斤成风”的出处。我在这里读出很深的悲哀，有时候尽管是作对的敌手，也会有很深的感情。虽然观念不同，但是依然可以有唇齿相依、唇亡齿寒的深厚情谊。
+
+庄子要表达跟惠子之间密切的关系和情谊，但是他不直接去表达这种感情，而是借用楚国郢都这个故事去讲，这就是典型的寓言。
+
+
+
+**肆 真正的逍遥是什么？**
+
+《逍遥游》开篇讲鲲鹏，这个故事大家都很熟悉。《逍遥游》是讲逍遥，过去很多学者有过争论，“鲲鹏”是不是逍遥？其实读完之后就知道，“鲲鹏”肯定不是逍遥，它是藉鲲鹏来讲逍遥。
+
+《逍遥游》前半部分讲了鲲和鹏，但是最后还是落在了人身上，庄子在《逍遥游》里其实是讲了人的四种境界：
+
+第一种境界：“知效一官，行比一乡，德合一君，而征一国”。这个层面就是我们现在所说的世俗成功。这个人很有本事，有能力、有地位，在工作上游刃有余，在世上过得还不错。
+
+但是对这样的成功人士，“宋荣子犹然笑之”，宋荣子为什么要笑？因为宋荣子的境界更高，这就是第二种境界：举世誉之而不加劝，举世非之而不加沮，定乎内外之分，辩乎荣辱之境。
+
+什么是“内外”？“内”是自我，“外”是外在；“定乎内外之分”，知道什么是内，什么是外。“辩乎荣辱之境”，“荣辱”都是外部的，是外部的环境界定的。能够辨别内外，将外部的荣辱放开，守住自己的内在，“举世誉之而不加劝，举世非之而不加沮”。
+
+其实像宋荣子这样已经是很高的境界了，能够把握内外，守住自我。但是庄子却提出第三种境界：夫列子御风而行，泠然善也，旬有五日而后反。
+
+列子能驾风行走，那样子实在轻盈美好，而且十五天后才返回。那列子的境界高在哪里？我后来自己体会下来，宋荣子境界很高，“定乎内外之分，辩乎荣辱之境”，但是这里有个危险，他把内外分得太清楚了。
+
+庄子主张在这个世界上要“和光同尘”，《天下篇》里讲“独与天地精神往来，而不傲倪于万物；不谴是非，以与世俗处。”把内外分得太清楚，会造成内在和外在的紧张感，最终还是会伤害到自己。
+
+屈原就是宋荣子的境界，屈原认为只有自己是对的，其他人都是错的。可能他确实是对的，但是最后却走投无路，含恨而死。屈原是一个很绝对的人，你看他写的“众人皆醉我独醒，举世皆浊我独清”就能感受到这一点。
+
+我们看待屈原，一方面看到他确实是个伟人，坚持理想，坚持自我；但是另一方面，他也是有问题的，他认为自己所坚持的就是对的，“虽九死其犹未悔”，就算死很多次也不悔改。这在庄子眼中是不认可的。
+
+列子能够御风而行，他是有所依凭的，凭藉一些外在的东西在这个世上自由行走。这样一看，“鲲鹏”其实就是这个境界。但是“鲲鹏”也只是到这个境界而已。
+
+庄子提出第四个境界：乘天地之正，御六气之辩，以游无穷。与天地和律，顺应万物的运行规律，与宇宙自然的节奏和律。这才是真正的逍遥。
+
+
+
+**伍 不只讲理，还讲情**
+
+《庄子》还有一个特别的地方，讲理也讲情。在他之前，大部分著作只讲理，譬如《老子》，一句句格言警句讲论道理非常精辟、精彩。但是《庄子》不只讲理，它还讲情，它是情理兼和的。讲道理的篇章，譬如《秋水》。但也有的篇章不是说理，它是用故事、文学性的方式去表达，最典型的就是《养生主》。
+
+庄子认为，不要去做无穷的追求，那些都是无穷无尽的。庄子在这里并不是批判知识，而是认为，对生命而言，所有妨碍生命的、将生命引向歧途的东西都是不好的，知识的追求也好，欲望的满足也罢，所有这些让生命走向歧路的都是不好的。
+
+《养生主》开篇就把核心的主张表达清楚了，后面的篇章不讲道理，一连串的都是故事。紧接着就是一个大家都熟悉的故事“庖丁解牛”。
+
+“庖丁解牛”并不是简单说一个熟能生巧的故事，而是讲述养生的道理。我们人就像这个解牛之刀，世间有很多很多障碍，如果硬碰的话，那会受到伤害。这个故事在整个《养生主》里是有特定意义的。
+
+总的来说，庄子认为生命的过程像日月的轮替，要顺应自然的规律，善始善终。庄子思想中很重要的一点就是“天道自然”，“自然”不是我们现在说的“自然界”，而是万物的本来面目。自然运行的规律是不可抗拒的，世界宇宙是高于人类的，人类无法反抗，只能顺应它。
+
+对于个体来说，既然自然是无法抗拒的，那就要“破除我执”，不必非要争个是非对错、你死我活，在天道面前，人是非常渺小的。
+
+庄子虽然对于自然、宇宙、人生的看法很高远，但是他也提出了许多游走世间的基本原则，即在这个世上如何具体地生活、保全自己，如何行走于世间。今天我们再读《庄子》，依然是很有启发的。
+
+
+
+注：本文整理于陈引驰老师在悦悦图书·志达书店讲座。
+
+
+
+[赵 娟：放下执着，让生命之花自然绽放——庄子《养生主》核心要义 _云南省社会科学院] https://www.sky.yn.gov.cn/xsyj/zgsd/2058002799458556442
+摘：首先，放下对知识的执着。《养生主》开头就写道：“吾生也有涯，而知也无涯。以有涯随无涯，殆已。已而为知者，殆而已矣。”在庄子看来，人生有限而学海无涯，用有限的生命去追求无限的知识，这岂不是徒劳吗?知识不断地消磨着有限的生命，这难道不是对生命的伤害吗?累积知识是为了提升生命的质量，而不是生命为了知识的累积。人们若追求无限的外物(包括知识)，将生命捆缚在外物中，最终必然会导致“殆”。当然，庄子并不反对读书、求知，而是说，在读书、求知的过程中，要保持足够的清醒。世人读书往往只是收集了一大堆看上去”有用”的知识，除了固化”自我”，对于生命的成长而言，并无实际上的益处。在庄子看来，知识并非“越多越好”，当然也不是“越少越好”，关键在于是否有益于对道的探寻，倘若知识与求道相关，自然是越多越好，如果读书只是固化了我执，则愈少愈好。在庄子看来，读书并不能代替生命体验，只有透过读书加深生命体验，进而通晓宇宙、社会、人生的客观规律和基本法则，体悟大道，这才是生命当中最为重要的事情。在《养生主》中，庄子着重探讨了由技入道的问题：文惠君曰：“嘻!善哉!技盖至此乎?”庖丁释刀对曰：“臣之所好者道也，进乎技矣。“可见，文惠君注重关心的是技，而庖丁看重的却是道。事实上，庄子是在强调，不仅要放下对知识的执着，同时也要放下对技术的执着，无论是知识，还是技术，只是进入那个大道的工具，而非目的，切不可顾此失彼、舍本逐末。
+……
+人对物欲的“私心”乃是万恶之源，百病之根。人一旦被“私心”掌握，必然心神外骛，损耗元气，只有放下对功名利禄的执着，做到知止知退，精神内守，邪气不侵，这样才能益寿延年，尽终其天年。
+……
+在庄子看来，生死乃是自然规律，不必为此过分忧虑，相反，只有放下对身体的执着，接受死亡，通过体道悟道，将个体生命融入到整个存在（“道”）当中，才能够实现对生死问题的最终超越。
+上述可见，《养生主》集中体现了庄子独特的生命观：放下执着。在庄子看来，养生之大患在于执着，这也是人生痛苦的根源所在。只有放下对知识、名利、身体的执着，才能够获得心灵上的自由，让生命之花自然绽放，进而实现精神上的自由与超越。
+
+[赵 娟：放下执着，让生命之花自然绽放——庄子《养生主》核心要义 _云南省社会科学院] https://www.sky.yn.gov.cn/xsyj/zgsd/2058002799458556442
+摘：庄子思想以豁达开阔、超然于尘世著称，这不仅体现在《逍遥游》当中，同时也体现在《养生主》中。作为《庄子内篇》中篇幅最短的文章，《养生主》集中反映了其独特的生命观。在庄子看来，**养生贵在积精全神，而其核心要义，在于放下执着。**
+
+　　**首先，放下对知识的执着。**《养生主》开头就写道：“吾生也有涯，而知也无涯。以有涯随无涯，殆已。已而为知者，殆而已矣。”在庄子看来，人生有限而学海无涯，用有限的生命去追求无限的知识，这岂不是徒劳吗?知识不断地消磨着有限的生命，这难道不是对生命的伤害吗?累积知识是为了提升生命的质量，而不是生命为了知识的累积。人们若追求无限的外物(包括知识)，将生命捆缚在外物中，最终必然会导致“殆”。当然，庄子并不反对读书、求知，而是说，在读书、求知的过程中，要保持足够的清醒。世人读书往往只是收集了一大堆看上去"有用"的知识，除了固化"自我"，对于生命的成长而言，并无实际上的益处。在庄子看来，知识并非“越多越好”，当然也不是“越少越好”，关键在于是否有益于对道的探寻，倘若知识与求道相关，自然是越多越好，如果读书只是固化了我执，则愈少愈好。在庄子看来，**读书并不能代替生命体验，只有透过读书加深生命体验，进而通晓宇宙、社会、人生的客观规律和基本法则，体悟大道，这才是生命当中最为重要的事情。**在《养生主》中，庄子着重探讨了由技入道的问题：文惠君曰：“嘻!善哉!技盖至此乎?”庖丁释刀对曰：“臣之所好者道也，进乎技矣。“可见，文惠君注重关心的是技，而庖丁看重的却是道。事实上，庄子是在强调，**不仅要放下对知识的执着，同时也要放下对技术的执着，无论是知识，还是技术，只是进入那个大道的工具，而非目的，切不可顾此失彼、舍本逐末。**
+
+　　**其次，放下对名利的执着。**《养生主》中说，“为善无近名，为恶无近刑。”做“善”事不要有求名之心，做“恶”事不要遭到刑戮。如此，则上不为名利所累，下不为刑罚所困，心无挂碍，悠然自得。在庄子看来，生命比道德更应当被关注。因为，人对外物的追逐是没有止境的，哪怕是对道德的追求。事实上，世人对道德的推崇，往往转化为对名利的追求，最终成为一种限制和束缚。庄子强调，**要懂得摆脱世俗功名利禄对自己心灵的限制和束缚，超越世俗社会是非、善恶、荣辱、生死等的对立，使心灵回归本来的自然逍遥、与道合一的状态，如此才能达到“知止不殆”。**庄子就深知贪慕功名富贵的后果，当楚国的国王要聘请他去做宰相的时候，他如此回答使者：“千金，重利;卿相，尊位也。子独不见郊祭之牺牛乎?养食之数岁，衣以文绣，以入太庙。当是之时，虽欲为孤豚，岂可得乎?子亟去，无污我。我宁游戏污渎之中而自快，无为有国者所羁，终身不仕，以快吾志焉。” 反观世人，穷其一生在名利场中争逐，才气挥洒且机关算尽，透支生命，丧失本性，到头来都是一场空。庄子曾说：“平易恬淡则忧患不能入，邪气不能袭，故其德全而神不亏。”人对物欲的“私心”乃是万恶之源，百病之根。**人一旦被“私心”掌握，必然心神外骛，损耗元气，只有放下对功名利禄的执着，做到知止知退，精神内守，邪气不侵，这样才能益寿延年，尽终其天年。**
+
+　　**再者，放下对身体的执着。**《养生主》最后一句，颇有深义：“指穷于为薪，火传也，不知其尽也。”薪有限，火无限，薪尽火传。无论怎么养生，肉体生命最终还是会消亡。在庄子看来，生与死的关系，如同昼夜的更迭交替，是自然而然的物体存在状况，完全属于自然现象，肉体生命是来来去去的，“适来，夫子时也;适去，夫子顺也“，因此，**对于肉体生命，不必过于执着，固然要倍加爱惜、善加护养，但更要学会接受，不仅接受出生，也接受死亡。**庄子的妻子去世了，惠子去吊唁，发现庄子不但不哭，反而坐在尸体旁边，敲着瓦盆唱起来。惠子指责他为何不哭而歌，他坦然地回答道：“开始我也很悲痛，后来仔细一想，人是怎样来到这个世上，又是怎样离开这个世界的呢?原来人是由气即自然界的非生命物质变化而来，气聚成形，气散则死。现在人的形体已死，又将变成非生命的物质了，故以鼓盆而歌，欢送和庆祝我的妻子重新回归自然。” 庄子在《至乐》篇中也说：“然察其始，而本无生;非徒无生也，而本无形;非徒无形也，而本无气。杂乎芒芴之间，变而有气，气变而有形，形变而有生。今又变而之死。是相与为春夏秋冬四时行也。人且偃然寝于巨室，而我嗷嗷然随而哭之，自以为不通乎命，故止也。”在庄子看来，**生死乃是自然规律，不必为此过分忧虑，相反，只有放下对身体的执着，接受死亡，通过体道悟道，将个体生命融入到整个存在（“道”）当中，才能够实现对生死问题的最终超越。**
+
+　　上述可见，《养生主》集中体现了庄子独特的生命观：放下执着。在庄子看来，**养生之大患在于执着，这也是人生痛苦的根源所在。只有放下对知识、名利、身体的执着，才能够获得心灵上的自由，让生命之花自然绽放，进而实现精神上的自由与超越。**
+
+　　(作者系云南省社会科学院民族文学所 赵娟副研究员)
+
+来源/作者：民族文学所/赵娟 责任编辑：代丽
+
+
+
+阳志平老师的豆瓣书单 [书单｜庄子] https://www.douban.com/doulist/152356941/
+
+
+
+406、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -12055,7 +12449,7 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 logging  
 
-202511230912 创作者YJH 完成终极版
+202511272202 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
