--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12423,7 +12423,17 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 
 
-406、Let this be my last word, that I trust in thy love.
+406、- [蔡志忠-道德经这几句话几乎解决人生所有问题\_哔哩哔哩\_bilibili] https://www.bilibili.com/video/BV1hnYPzcETA/?spm_id_from=333.788.recommend_more_video.3&trackid=web_related_0.router-related-2206419-dk9pw.1764309527974.324&vd_source=63d895614a140ed505369ea43f0b6602
+
+我大半生研究国学，可以送你两个心法，足以解决你人生的大部分问题。第一个，世间万物的发展最终都会它走向的对立面。《道德经》里说，反者道之动，道的运行方向往往与我们想要的是相反的。任何事物发展到最高峰，都会物极必反。你觉得是失去，实际上是一种得到，你觉得你得到了实际上是一种失去，就像塞翁失马。老翁的马无故跑到胡地，领居纷纷惋惜，但不久后，马带回了一群胡地骏马，可老翁的儿子因骑胡马摔断腿，邻居深表同情，可儿子却因腿瘸免于兵役，最终父子得以保全性命。
+
+所以你会发现，抓取心越重的人适得其反，不去抓取的人反而得到了更多。什么意思呢？就是你想要获得，就要从付出开始，想要强大就越要从小事开始，想要高就要从低开始。一个懂得道家思想境界的人，他的出场一定是低调的。
+
+**第二个，无心生大用。你越不慌不忙，世界越为你让路，做事情的时候越轻松，越不在乎，结果反而出乎意料的好。这就叫无心生大用，这个心法在工作、生活和感情方面普遍适用。**当你不再执念于结果便自然能安住当下，从而专注于当下的每一步。就像有心栽花花不开，无心插柳柳成荫，世间很多妙境都藏在无心的松弛感里，所谓无心，并不是消极倦怠，而是放下对结果的执念，以无为之心行有为之事。就像流水不争流向，却终成江海，草木不问春秋，却智慧生长。当我们卸下功利心的重负，以纯粹的专注投入当下，反而能激发生命的本真力量，进而达成功成事遂之见，此心从容泰然，万物智慧，各得其所。
+
+
+
+407、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -12449,7 +12459,7 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 logging  
 
-202511272202 创作者YJH 完成终极版
+202511291054 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
